Bug 99369 - FORMATTING: Textalignment vertically dosn't apply anymore
Summary: FORMATTING: Textalignment vertically dosn't apply anymore
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords:
: 99204 99851 100116 100425 100531 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-04-18 10:12 UTC by Uwe Graßhoff
Modified: 2016-10-25 19:02 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Picture of the "Text format" settings and the "formatted" table cell. (17.69 KB, image/png)
2016-04-18 10:12 UTC, Uwe Graßhoff
Details
document with text which should be vertical (7.51 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-04-18 18:09 UTC, Uwe Graßhoff
Details
pdf of the ods (9.51 KB, application/pdf)
2016-04-18 18:12 UTC, Uwe Graßhoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Uwe Graßhoff 2016-04-18 10:12:25 UTC
Created attachment 124454 [details]
Picture of the "Text format" settings and the "formatted" table cell.

I have an calc file with text which should be readable from up to down.

But the text is still in normal condition (readable from left to right, but the red line (spell checking) is going from up to down ;-).

The bugstill persists after repair installation of libre office and a restart of windows 7.


Version Info:
Version: 5.1.2.2
Build-ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU-Threats: 8; BS-Version: Windows 6.1; UI-Render: GL; 
Gebietsschema: de-DE (de_DE)



See attachment for screenshot of settings and affected cell.


Regards
Uwe Graßhoff
Comment 1 raal 2016-04-18 14:55:27 UTC Comment hidden (obsolete)
Comment 2 Uwe Graßhoff 2016-04-18 18:09:53 UTC
Created attachment 124475 [details]
document with text which should be vertical
Comment 3 Uwe Graßhoff 2016-04-18 18:12:32 UTC
Created attachment 124476 [details]
pdf of the ods

I attached two files to the bug. The ODS is a sample file where the text should be vertical. 

The PDF is generated using the Export as PDF function of "scalc". In the PDF all is fine. But in Calc itself it's wrong
Comment 4 Buovjaga 2016-04-19 11:34:20 UTC
Please disable Tools - Options - LibO - View - Use OpenGL for all rendering

Set to NEEDINFO.
Change back to UNCONFIRMED after you have done it and tell us what happened.
Comment 5 Buovjaga 2016-04-19 11:43:53 UTC
Also tell us the contents of your C:\Users\User\AppData\Roaming\LibreOffice\4\cache\opengl_device.log
Comment 6 Uwe Graßhoff 2016-04-19 13:14:21 UTC
Content of opengl_device.log:
DriverVersion: 10.18.14.4264
DriverDate: 8-4-2015
DeviceID: PCI\VEN_8086&DEV_0416&SUBSYS_35011558&REV_06
AdapterVendorID: 0x8086
AdapterDeviceID: 0x0416
AdapterSubsysID: 0x35011558
DeviceKey: System\CurrentControlSet\Control\Video\{14702592-1699-411F-913C-4F17A4ECBC95}\0000
DeviceString: Intel(R) HD Graphics 4600
____________________________________________________

I disabled the OpenGL Rendering, now the text is rendered correctly :-)
Comment 7 raal 2016-04-19 14:25:08 UTC
Uwe, please could you upgrade your driver?  DriverDate: 8-4-2015

https://downloadcenter.intel.com/product/81496/Intel-HD-Graphics-4600-for-4th-Generation-Intel-Core-Processors

Thanks
Comment 8 Uwe Graßhoff 2016-04-19 15:52:44 UTC
Hi raal,

I updatet the driver and enabled opengl and the bug is still there.

DriverVersion: 10.18.14.4332
DriverDate: 11-20-2015
DeviceID: PCI\VEN_8086&DEV_0416&SUBSYS_35011558&REV_06
AdapterVendorID: 0x8086
AdapterDeviceID: 0x0416
AdapterSubsysID: 0x35011558
DeviceKey: System\CurrentControlSet\Control\Video\{14702592-1699-411F-913C-4F17A4ECBC95}\0000
DeviceString: Intel(R) HD Graphics 4600
Comment 9 Buovjaga 2016-04-19 16:48:14 UTC
Maybe try with a fresh master build with OpenGL enabled just for curiosity's sake: http://dev-builds.libreoffice.org/daily/master/Win-x86_64@62-TDF/current/

Those install separately.
Comment 10 Uwe Graßhoff 2016-04-20 12:10:39 UTC
I installed XXX.

But I can't start it I alway get this error message
---------------------------
LibreOfficeDev 5.2 - Fatal Error
---------------------------
Die Anwendung kann nicht gestartet werden. 
Extension Manager: exception in synchronize
---------------------------
OK   
---------------------------


I didn't remove the stable version. So I have both version installed.
Comment 11 Uwe Graßhoff 2016-04-20 12:11:16 UTC
And XXX stands for this Version master~2016-04-16_20.39.57_LibreOfficeDev_5.2.0.0.alpha0_Win_x64_en-US_de_ar_ja_ru_qtz.msi
Comment 12 Buovjaga 2016-04-20 12:14:51 UTC
Right.. I heard today that there was such a crashing problem. However, this fresher build from a different build machine does not crash for me: http://dev-builds.libreoffice.org/daily/master/Win-x86@39/current/
Comment 13 Uwe Graßhoff 2016-04-20 13:02:41 UTC
This build starts, but the error is still there.
Can I generate any kind of useful logfiles for you?
Comment 14 Buovjaga 2016-04-20 13:27:24 UTC
(In reply to Uwe Graßhoff from comment #13)
> This build starts, but the error is still there.
> Can I generate any kind of useful logfiles for you?

It seems it is analyzed quite good already: Bug 99258
Comment 15 Uwe Graßhoff 2016-04-20 15:17:26 UTC
(In reply to Buovjaga from comment #14)
> (In reply to Uwe Graßhoff from comment #13)
> > This build starts, but the error is still there.
> > Can I generate any kind of useful logfiles for you?
> 
> It seems it is analyzed quite good already: Bug 99258


Sry I mean the text layout problem. Not the crash ;-)
Comment 16 Commit Notification 2016-05-12 11:29:42 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43c95611d2621d1f2f9d60b26c07aad25c62baed

tdf#99369: Try harder to bail out for non-horizontal text

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 How can I remove my account? 2016-05-12 11:54:01 UTC
For 5.1: https://gerrit.libreoffice.org/#/c/24929/
Comment 18 raal 2016-05-12 12:41:50 UTC
Thanks Tor
Comment 19 Commit Notification 2016-05-13 07:21:14 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd8319479fe3863324c27407625fe5e6ba759f17&h=libreoffice-5-1

tdf#99369: Try harder to bail out for non-horizontal text

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 How can I remove my account? 2016-05-13 09:13:39 UTC
*** Bug 99204 has been marked as a duplicate of this bug. ***
Comment 21 m_a_riosv 2016-05-15 23:53:19 UTC
*** Bug 99851 has been marked as a duplicate of this bug. ***
Comment 22 m_a_riosv 2016-05-29 10:59:52 UTC
*** Bug 100116 has been marked as a duplicate of this bug. ***
Comment 23 m_a_riosv 2016-06-21 23:55:26 UTC
*** Bug 100531 has been marked as a duplicate of this bug. ***
Comment 24 m_a_riosv 2016-06-21 23:56:08 UTC
*** Bug 100425 has been marked as a duplicate of this bug. ***