tdf#99369: Try harder to bail out for non-horizontal text

Look not only for fonts with rotated glyphs (where the first character
of the face name is '@') but also for font objects with non-zero
orientation or escapement in general.

Change-Id: Ia88d38010e52ada8193f2b8057d9f3250108e9f1